test/good/nullables/op19.px

d: {String:Int}? = {"k": 4, "kk": 5}
print d?["k"]

d = null
print d?["k"]
