test/bad/dictionaries/decl02.px

d: {Float:String?} = {'1': null}
